force-app/main/default/objects/Onboard_Request__c/fields/Permit_Customer_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Permit_Customer_Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit Customer Transactions</label>
    <referenceTo>Free_Zone_Payment__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>