force-app/main/default/objects/Onboard_Request__c/fields/Place_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Incorporation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nationality</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>