force-app/main/default/objects/Onboard_Request__c/fields/Place_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Registration__c</fullName>
    <label>Place_of_Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>