force-app/main/default/objects/Onboard_Request__c/fields/Po_Box_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Po_Box_Postal_Code__c</fullName>
    <label>Po_Box_Postal_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>