force-app/main/default/objects/Onboard_Request__c/fields/POA_Name__c.field-meta.xml
<CustomField>
    <fullName>POA_Name__c</fullName>
    <label>POA_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>