force-app/main/default/objects/Onboard_Request__c/fields/Portal_Status_Display__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status_Display__c</fullName>
    <formula>CASE(text(Status__c), 
&apos;Draft&apos;, if(Finalized__c,&apos;Pending Payment&apos;,&apos;Draft&apos;), 
&apos;Return for Re-Submit&apos;,&apos;Draft&apos;,


TEXT(Status__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Status Display</label>
    <type>Text</type>
</CustomField>