force-app/main/default/objects/Onboard_Request__c/fields/Postcode_Makani__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Makani__c</fullName>
    <label>Postcode or Makani</label>
    <length>255</length>
    <type>Text</type>
</CustomField>