force-app/main/default/objects/Onboard_Request__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>Account_Name__r.General_Manager_Name__c</formula>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>