force-app/main/default/objects/Onboard_Request__c/fields/Primary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_Number__c</fullName>
    <label>Primary_Mobile_Number</label>
    <type>Phone</type>
</CustomField>