force-app/main/default/objects/Onboard_Request__c/fields/Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_and_Services__c</fullName>
    <label>Products and Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>