force-app/main/default/objects/Onboard_Request__c/fields/Proposed_company_name_1_English__c.field-meta.xml
<CustomField>
    <fullName>Proposed_company_name_1_English__c</fullName>
    <label>Proposed company name 1 (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>