force-app/main/default/objects/Onboard_Request__c/fields/Proposed_Company_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Company_Name_Arabic__c</fullName>
    <label>Proposed Company Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>