force-app/main/default/objects/Onboard_Request__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=90x90&amp;data=http://dubaisouth.ae/en/verify-document?refid=https://dubaisouth--uatrevamp.sandbox.my.salesforce-sites.com/eVerification/QRView?ref=&quot;+ Id , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>