force-app/main/default/objects/Onboard_Request__c/fields/Reason_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_cancellation__c</fullName>
    <label>Reason for cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High license fee</fullName>
            </value>
            <value>
                <fullName>High lease amount</fullName>
            </value>
            <value>
                <fullName>High freezone fees</fullName>
            </value>
            <value>
                <fullName>Relocating</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>