force-app/main/default/objects/Onboard_Request__c/fields/Reason_For_Transferring__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Transferring__c</fullName>
    <label>Reason For Transferring</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>