force-app/main/default/objects/Onboard_Request__c/fields/Reason_for_voluntary_suspension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_voluntary_suspension__c</fullName>
    <label>Reason for voluntary suspension</label>
    <type>TextArea</type>
</CustomField>