force-app/main/default/objects/Onboard_Request__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipName>Onboard_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>