force-app/main/default/objects/Onboard_Request__c/fields/Record_18_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_18_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record 18 Id</label>
    <type>Text</type>
</CustomField>