force-app/main/default/objects/Onboard_Request__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <formula>Account_Name__r.Registration_Number_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Number</label>
    <type>Text</type>
</CustomField>