force-app/main/default/objects/Onboard_Request__c/fields/Request_Category_License__c.field-meta.xml
<CustomField>
    <fullName>Request_Category_License__c</fullName>
    <formula>IF(
OR(TEXT(Service_Type__c) == &apos;Urgent&apos;,Urgent_Processing__c),
IMAGE(&apos;https://dubaisouth.file.force.com/servlet/servlet.ImageServer?id=0153z000007sDkB&amp;oid=00D200000005fhi&amp;lastMod=1710359413000&apos;, &apos;URGENT&apos;, 30, 90),

IMAGE(&apos;https://dubaisouth.file.force.com/servlet/servlet.ImageServer?id=0153z000007sDjw&amp;oid=00D200000005fhi&amp;lastMod=1710358879000&apos;,&apos;NORMAL&apos;,30,90)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Category</label>
    <type>Text</type>
</CustomField>