force-app/main/default/objects/Onboard_Request__c/fields/Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Sub_Type__c</fullName>
    <label>Request_Sub_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Access Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>