force-app/main/default/objects/Onboard_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <formula>Action_Template__r.Menu_Subtext__c</formula>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>