force-app/main/default/objects/Onboard_Request__c/fields/Require_Sakany_accomodation_for_staff__c.field-meta.xml
<CustomField>
    <fullName>Require_Sakany_accomodation_for_staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Sakany accomodation for staff?</label>
    <type>Checkbox</type>
</CustomField>