force-app/main/default/objects/Onboard_Request__c/fields/Required_Lease_Duration__c.field-meta.xml
<CustomField>
    <fullName>Required_Lease_Duration__c</fullName>
    <label>Required Lease Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>