force-app/main/default/objects/Onboard_Request__c/fields/Required_Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Required_Unit_Size__c</fullName>
    <label>Required Unit Size (Sqm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>