force-app/main/default/objects/Onboard_Request__c/fields/REVAMP_Status_Portal_Filter__c.field-meta.xml
<CustomField>
    <fullName>REVAMP_Status_Portal_Filter__c</fullName>
    <formula>Portal_Status_Display__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REVAMP Status (Portal Filter)</label>
    <type>Text</type>
</CustomField>