force-app/main/default/objects/Onboard_Request__c/fields/Revenues__c.field-meta.xml
<CustomField>
    <fullName>Revenues__c</fullName>
    <label>Revenues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>