force-app/main/default/objects/Onboard_Request__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <formula>&apos;Test available on Customer Portal&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Request</label>
    <type>Text</type>
</CustomField>