force-app/main/default/objects/Onboard_Request__c/fields/Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Share_Capital__c</fullName>
    <label>Share Capital</label>
    <summarizedField>OB_Amendment__c.No_of_shares__c</summarizedField>
    <summaryFilterItems>
        <field>OB_Amendment__c.Is_Share_Holder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OB_Amendment__c.Onboard_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>