force-app/main/default/objects/Onboard_Request__c/fields/Share_Capital_AED__c.field-meta.xml
<CustomField>
    <fullName>Share_Capital_AED__c</fullName>
    <formula>TEXT(Share_Capital__c)   &amp; &apos; AED&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share Capital(AED)</label>
    <type>Text</type>
</CustomField>