force-app/main/default/objects/Onboard_Request__c/fields/Show_Establishment_Card__c.field-meta.xml
<CustomField>
    <fullName>Show_Establishment_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Establishment Card?</label>
    <type>Checkbox</type>
</CustomField>