force-app/main/default/objects/Onboard_Request__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>acbox__Transaction_Values</valueSetName>
    </valueSet>
</CustomField>