force-app/main/default/objects/Onboard_Request__c/fields/Step_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Step_Identifier__c</fullName>
    <label>Step Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>