force-app/main/default/objects/Onboard_Request__c/fields/Storgae_Materials__c.field-meta.xml
<CustomField>
    <fullName>Storgae_Materials__c</fullName>
    <label>Storgae Materials</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>