force-app/main/default/objects/Onboard_Request__c/fields/Submited_Date__c.field-meta.xml
<CustomField>
    <fullName>Submited_Date__c</fullName>
    <label>Submited Date</label>
    <type>DateTime</type>
</CustomField>