force-app/main/default/objects/Onboard_Request__c/fields/Suspension_Period__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Period__c</fullName>
    <label>Suspension Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>