force-app/main/default/objects/Onboard_Request__c/fields/Target_Industa__c.field-meta.xml
<CustomField>
    <fullName>Target_Industa__c</fullName>
    <label>Target Industry Segments</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>