force-app/main/default/objects/Onboard_Request__c/fields/Tenancy_Contract__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenancy Contract</label>
    <referenceTo>Contract_DWC__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>