force-app/main/default/objects/Onboard_Request__c/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <label>Total_Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>