force-app/main/default/objects/Onboard_Request__c/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <description>This is to capture the trade name to append with approved company name</description>
    <label>Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>