force-app/main/default/objects/Onboard_Request__c/fields/Trade_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name_Arabic__c</fullName>
    <description>This is to capture the trade name arabic</description>
    <label>Trade Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>