force-app/main/default/objects/Onboard_Request__c/fields/Transferring_To_Authority_Name__c.field-meta.xml
<CustomField>
    <fullName>Transferring_To_Authority_Name__c</fullName>
    <label>Transferring To Authority Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dubai Health Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>