force-app/main/default/objects/Onboard_Request__c/fields/UBO_Details_Are_Up_To_Date__c.field-meta.xml
<CustomField>
    <fullName>UBO_Details_Are_Up_To_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UBO Details Are Up To Date?</label>
    <type>Checkbox</type>
</CustomField>