force-app/main/default/objects/Onboard_Request__c/fields/UBO_Indicator__c.field-meta.xml
<CustomField>
    <fullName>UBO_Indicator__c</fullName>
    <formula>IMAGE(&quot;/resource/UBOIndicator1&quot;, &quot;UBO Indicator&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UBO Indicator</label>
    <type>Text</type>
</CustomField>