force-app/main/default/objects/Onboard_Request__c/fields/Urgent_Processing_EC__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Processing_EC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Processing EC</label>
    <type>Checkbox</type>
</CustomField>