force-app/main/default/objects/Onboard_Request__c/fields/Water_cbm_day__c.field-meta.xml
<CustomField>
    <fullName>Water_cbm_day__c</fullName>
    <label>Water(cbm/day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>