force-app/main/default/objects/Onboard_Request__c/fields/What_Is_Your_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>What_Is_Your_Financial_Year__c</fullName>
    <label>What Is Your Financial Year?</label>
    <type>Date</type>
</CustomField>