force-app/main/default/objects/Onboard_Request__c/fields/X3rd_Party_Lease__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Lease__c</fullName>
    <label>3rd Party Lease</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emaar South</fullName>
            </value>
            <value>
                <fullName>Mag5</fullName>
            </value>
            <value>
                <fullName>Dubai Airport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>