force-app/main/default/objects/Onboard_Request__c/recordTypes/Add_Remove_UBO.recordType-meta.xml
<RecordType>
    <fullName>Add_Remove_UBO</fullName>
    <active>true</active>
    <label>Add / Remove UBO</label>
</RecordType>