force-app/main/default/objects/Onboard_Request__c/recordTypes/Business_Case.recordType-meta.xml
<RecordType>
    <fullName>Business_Case</fullName>
    <active>true</active>
    <label>Initial Approval</label>
</RecordType>