force-app/main/default/objects/Onboard_Request__c/recordTypes/Change_Commercial_Name.recordType-meta.xml
<RecordType>
    <fullName>Change_Commercial_Name</fullName>
    <active>true</active>
    <label>Change Commercial Name</label>
</RecordType>