force-app/main/default/objects/Onboard_Request__c/recordTypes/Change_Company_Address.recordType-meta.xml
<RecordType>
    <fullName>Change_Company_Address</fullName>
    <active>true</active>
    <label>Change Company Address</label>
</RecordType>