force-app/main/default/objects/Onboard_Request__c/recordTypes/Change_Company_Name.recordType-meta.xml
<RecordType>
    <fullName>Change_Company_Name</fullName>
    <active>true</active>
    <description>Change Company Name</description>
    <label>Change Company Name</label>
</RecordType>