force-app/main/default/objects/Onboard_Request__c/recordTypes/Change_Financial_Year.recordType-meta.xml
<RecordType>
    <fullName>Change_Financial_Year</fullName>
    <active>true</active>
    <label>Change Financial Year</label>
</RecordType>