force-app/main/default/objects/Onboard_Request__c/recordTypes/Change_Legal_Status_DWC_LLC_to_Branch.recordType-meta.xml
<RecordType>
    <fullName>Change_Legal_Status_DWC_LLC_to_Branch</fullName>
    <active>true</active>
    <label>Change Legal Status DWC-LLC to Branch</label>
</RecordType>