force-app/main/default/objects/Onboard_Request__c/recordTypes/EstablishmentCardIssuance.recordType-meta.xml
<RecordType>
    <fullName>EstablishmentCardIssuance</fullName>
    <active>true</active>
    <label>EstablishmentCardIssuance</label>
</RecordType>