force-app/main/default/objects/Onboard_Request__c/recordTypes/Financial_Auditing_Report.recordType-meta.xml
<RecordType>
    <fullName>Financial_Auditing_Report</fullName>
    <active>true</active>
    <label>Financial Auditing Report</label>
</RecordType>