force-app/main/default/objects/Onboard_Request__c/recordTypes/Freelance_License_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Freelance_License_Renewal</fullName>
    <active>true</active>
    <label>Freelance License Renewal</label>
</RecordType>