force-app/main/default/objects/Onboard_Request__c/recordTypes/Freelancer.recordType-meta.xml
<RecordType>
    <fullName>Freelancer</fullName>
    <active>true</active>
    <label>Freelancer</label>
</RecordType>