force-app/main/default/objects/Onboard_Request__c/recordTypes/Freelancer_License_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Freelancer_License_Cancellation</fullName>
    <active>true</active>
    <label>Freelancer License Cancellation</label>
</RecordType>