force-app/main/default/objects/Onboard_Request__c/recordTypes/Lease_Company_Registration.recordType-meta.xml
<RecordType>
    <fullName>Lease_Company_Registration</fullName>
    <active>true</active>
    <label>Lease &amp; Company Registration</label>
</RecordType>