force-app/main/default/objects/Onboard_Request__c/recordTypes/License_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>License_Cancellation</fullName>
    <active>true</active>
    <label>License Cancellation</label>
</RecordType>