force-app/main/default/objects/Onboard_Request__c/recordTypes/License_Reactivation.recordType-meta.xml
<RecordType>
    <fullName>License_Reactivation</fullName>
    <active>true</active>
    <label>License Reactivation</label>
</RecordType>