force-app/main/default/objects/Onboard_Request__c/recordTypes/License_Renewal.recordType-meta.xml
<RecordType>
    <fullName>License_Renewal</fullName>
    <active>true</active>
    <label>License Renewal</label>
</RecordType>