force-app/main/default/objects/Onboard_Request__c/recordTypes/Permits_And_Passes.recordType-meta.xml
<RecordType>
    <fullName>Permits_And_Passes</fullName>
    <active>true</active>
    <description>Represents all the permit and pass requests</description>
    <label>Permits and Passes</label>
</RecordType>