force-app/main/default/objects/Onboard_Request__c/recordTypes/Transfer_A_Company_from_Dubai_South_to_Another_Dubai_Freezone.recordType-meta.xml
<RecordType>
    <fullName>Transfer_A_Company_from_Dubai_South_to_Another_Dubai_Freezone</fullName>
    <active>true</active>
    <label>Transfer A Company from Dubai South to Another Dubai Freezone</label>
</RecordType>