force-app/main/default/objects/Onboard_Request__c/recordTypes/Update_Primary_Contact_Information.recordType-meta.xml
<RecordType>
    <fullName>Update_Primary_Contact_Information</fullName>
    <active>true</active>
    <label>Update Primary Contact Information</label>
</RecordType>