force-app/main/default/objects/Onboard_Request__c/recordTypes/Voluntary_Suspension_of_License.recordType-meta.xml
<RecordType>
    <fullName>Voluntary_Suspension_of_License</fullName>
    <active>true</active>
    <label>Voluntary Suspension of License</label>
</RecordType>