force-app/main/default/objects/Onboard_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Action_Template__c</columns>
    <columns>Email_Address__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Request_Category_License__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>