force-app/main/default/objects/Onboard_Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Action_Template_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>