force-app/main/default/objects/Onboard_Request__c/listViews/AviationCityLeadsQueue_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>AviationCityLeadsQueue_Onboard_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Aviation City Leads Queue</label>
    <queue>AviationCityLeadsQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>