force-app/main/default/objects/Onboard_Request__c/listViews/Compliance_Director_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>Compliance_Director_Onboard_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance Director</label>
    <queue>Compliance_Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>