force-app/main/default/objects/Onboard_Request__c/listViews/Compliance_Team_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>Compliance_Team_Onboard_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliance Officer</label>
    <queue>Compliance_Officer</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>