force-app/main/default/objects/Onboard_Request__c/listViews/Initial_Approval.listView-meta.xml
<ListView>
    <fullName>Initial_Approval</fullName>
    <columns>NAME</columns>
    <columns>Action_Template__c</columns>
    <columns>Status__c</columns>
    <columns>Business_Entity__c</columns>
    <columns>Notification_Email__c</columns>
    <columns>Notification_Mobile_UAE__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Template__c</field>
        <operation>equals</operation>
        <value>Initial Approval</value>
    </filters>
    <label>Initial Approval</label>
</ListView>