force-app/main/default/objects/Onboard_Request__c/listViews/Logistics_Operations_Queue_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>Logistics_Operations_Queue_Onboard_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Logistics Operations Queue</label>
    <queue>Logistics_Operations_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>