force-app/main/default/objects/Onboard_Request__c/listViews/Pending_EC_Queue_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>Pending_EC_Queue_Onboard_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Pending EC - Queue</label>
    <queue>Pending_EC_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>