force-app/main/default/objects/Onboard_Request__c/listViews/Registration_And_Licensing_HOD_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>Registration_And_Licensing_HOD_Onboard_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Registration And Licensing - HOD</label>
    <queue>Registration_And_Licensing_HOD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>