force-app/main/default/objects/Onboard_Request__c/listViews/Registration_And_Licensing_team_Onboard_Request.listView-meta.xml
<ListView>
    <fullName>Registration_And_Licensing_team_Onboard_Request</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <label>Registration &amp; Licensing Team - Revamp</label>
    <queue>Registration_And_Licensing_team</queue>
</ListView>